# lime

./: Cargo.toml  README.md  example.lime
.github/workflows/: rust-build.yml  rust-clippy.yml  rust.yml
design/: design.md
editor/: brush.rs  main.rs  viewport.rs
lime/: grammar.pest  lime.pest  main.rs
src/: grammar.pest  lexer.rs  main.rs
tests/scripts/: basic  basic.lime
