[package]
name = "lime"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"
repository = "https://github.com/jackerschott/lime"
readme = "README.md"
categories = ["multimedia::images"]
keywords = ["media","image","editor","scripting"]

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"

[[bin]]
name = "lime"
path = "lime/main.rs"

[[bin]]
name = "editor"
path = "editor/main.rs"
